allow issues titles and others to wrap!

--- a/agile-web/src/main/resources/org/headsupdev/agile/web/common.css
+++ b/agile-web/src/main/resources/org/headsupdev/agile/web/common.css
@@ -169,6 +169,10 @@ h1, h2, h3, h4, h5, h6 {
     white-space: nowrap;
 }
 
+h2 span.summary {
+    white-space: normal;
+}
+
 img {
     border: 0;
 }
